--- a/style.css
+++ b/style.css
@@ -217,3 +217,76 @@
     background-color: rgb(135, 135, 42) ;
     color: #ffff;
 }
+.envision{
+    height: 300px;
+    width: 100%;
+    /* background-color: #bcdc; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.envision .one{
+    height: 200px;
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #6a7c3e;
+    font-size: 60px;
+    font-weight: 700;
+    font-family: "Libre Baskerville", serif;
+    color: #fff;
+   
+}
+.practice{
+    height: 200px;
+    width: 55%;
+    /* border: 2px solid #000; */
+}
+.practice p{
+    font-size: 40px;
+    line-height: 60px;
+    font-weight: 800;
+    font-family: "Libre Baskerville", serif;
+}
+
+.images_hover{
+    height: 450px;
+    width: 100%;
+    /* background-color: #3b5998; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.hover_box{
+    height: 380px;
+    width: 30%;
+    /* border: 2px solid #000; */
+    background-image: url(https://assets.nicepagecdn.com/d2cc3eaa/16689/images/5646.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  
+}
+
+
+.hover_box1{
+    height: 380px;
+    width: 30%;
+    /* border: 2px solid #000; */
+    background-image: url(https://assets.nicepagecdn.com/d2cc3eaa/16689/images/pexels-cup-of-couple-6633450.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.hover_box2{
+    height: 380px;
+    width: 30%;
+    /* border: 2px solid #000; */
+    background-image: url(https://assets.nicepagecdn.com/d2cc3eaa/16689/images/56456.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
