--- a/style.css
+++ b/style.css
@@ -116,16 +116,17 @@
 
 }
 .box1{
-    height: 700px;
+    height: 600px;
     width: 100%;
     /* border: 2px solid #000; */
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-items: center;
 
 }
 .images_box{
-    height: 650px;
-    width: 50%;
+    height: 500px;
+    width: 40%;
     /* border: 2px solid #000; */
 }
 .images_box img{
@@ -133,22 +134,13 @@
     width: 90%;
     object-fit: cover;
 }
-.images_box2{
-    position: relative;
-    height: 550px;
-    width: 40%;
-    /* border: 2px solid #000; */
-    background-image: url(./153-1532288_pattern-dots-2.png);
-}
+
 .cricle-img{
-    border: 1px solid #ccc;
-    position: absolute;
+    /* border: 3px solid #1070a8; */
     height: 450px;
-    width: 80%;
+    width: 40%;
     border-radius: 50%;
     background-color: #b4bd9b;
-    bottom: 22px;
-    right: 160px;
     background-image: url(./g.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -170,19 +162,19 @@
     flex-direction: column;
 }
 .Planninn h2{
-    font-size: 55px;
+    font-size: 42px;
     letter-spacing: 1px;
     font-family: Arial, Helvetica, sans-serif;
   
 }
 .Planninn .dictum{
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 19px;
     line-height: 35px;
     letter-spacing: 1px;
 }
 .Planninn .from{
-    font-size: 22px;
+    font-size: 19px;
     margin-top: 20px;
 }
 .from a{
@@ -197,7 +189,7 @@
 .Planninn2 p{
     margin-top: 15px;
     line-height:40px;
-    font-size: 22px;
+    font-size: 19px;
 }
 .Planninn2 button{
     font-family: Arial, Helvetica, sans-serif;
